fix сохранения данных в файл